# nerve

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  MANIFESTO.md  README.md  SECURITY.md  SERVER.md  release-please-config.json
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-tag.yml  ci.yml  pages.yml  release-please.yml  release.yml
.nerve/: .gitignore  memory.md  verify.toml
assets/: banner.txt  screenshot-chat.txt  screenshot-nervebar.txt  screenshot-welcome.txt
docs/: BUILD-QUALITY.md  DETERMINISM.md  FEATURES.md  GUIDE.md  JOB-SIZING.md  MEMORY-DB-SPEC.md  PLUGINS.md  TEST-STATUS.md  WALKTHROUGH.md
examples/plugins/todos/: plugin.toml  run.sh
prompts/: example.toml
site/: index.html
src/: app.rs  app_tests.rs  automation.rs  clipboard.rs  clipboard_manager.rs  completion.rs  config.rs  config_tests.rs  conversation.rs  daemon.rs  design.rs  design_presets.rs  files.rs  history.rs  input.rs  keybinds.rs  main.rs  main_tests.rs  memory_recall.rs  model_router.rs  plugins.rs  project.rs  project_context.rs  provider_health.rs  provider_setup.rs  queue.rs  queue_tests.rs  remote.rs  remote_tests.rs  scaffold.rs  session.rs  shell.rs  shell_tests.rs  splash.rs  usage.rs  verify.rs  verify_project.rs  worker.rs  workspace.rs
src/agent/: auto_context.rs  context.rs  headless.rs  headless_tests.rs  intent.rs  mod.rs  pipeline.rs  tools.rs
src/agent/tools/: exec.rs  fs.rs  fs_tests.rs  mod.rs  parse.rs
src/ai/: claude_code.rs  copilot.rs  mod.rs  openai.rs  provider.rs  retry.rs
src/commands/: ai.rs  catalog.rs  chat.rs  files.rs  git.rs  info.rs  knowledge.rs  mod.rs  project.rs  server.rs  settings.rs  shell.rs
src/input/: history_search.rs  mod.rs  overlays.rs  settings.rs
src/knowledge/: ingest.rs  mod.rs  search.rs  store.rs
src/prompts/: builtin.rs  custom.rs  mod.rs  search.rs
src/scraper/: mod.rs  search.rs  web.rs
src/ui/: autocomplete.rs  chat.rs  clipboard_manager.rs  command_bar.rs  help.rs  history_browser.rs  input_box.rs  markdown.rs  mod.rs  prompt_picker.rs  search.rs  selectors.rs  settings.rs  status_bar.rs  theme.rs  utils.rs
