[package]
name = "nerve"
version = "0.1.0"
edition = "2024"
description = "Raw AI power in your terminal"
license = "MIT"
repository = "https://github.com/Artaeon/nerve"
homepage = "https://github.com/Artaeon/nerve"
keywords = ["ai", "tui", "terminal", "assistant", "agent"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "nerve"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Clipboard
arboard = "3"

# XDG config paths
dirs = "6"

# Error handling
anyhow = "1"
thiserror = "2"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Fuzzy matching for prompt search
fuzzy-matcher = "0.3"

# Unique IDs for conversations
uuid = { version = "1", features = ["v4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async streams
tokio-stream = "0.1"
futures = "0.3"

# Syntax highlighting
syntect = "5"

# Markdown parsing
pulldown-cmark = "0.13"

# Tracing/logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
