[package]
name = "nerve"
version = "0.1.0"
edition = "2024"
description = "Raw AI power in your terminal"
authors = ["Artaeon <raphael.lugmayr@stoicera.com>"]
license = "MIT"
repository = "https://github.com/Artaeon/nerve"
homepage = "https://github.com/Artaeon/nerve"
keywords = ["ai", "tui", "terminal", "assistant", "agent"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
rust-version = "1.85"
exclude = [
    ".github/",
    "docs/",
    "assets/",
    "MANIFESTO.md",
    "CONTRIBUTING.md",
    "CODE_OF_CONDUCT.md",
]

[[bin]]
name = "nerve"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Clipboard
arboard = "3"

# XDG config paths
dirs = "6"

# Error handling
anyhow = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Fuzzy matching for prompt search
fuzzy-matcher = "0.3"

# Unique IDs for conversations
uuid = { version = "1", features = ["v4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async streams
futures = "0.3"

# Fast random number generation (used for retry jitter)
fastrand = "2"

# Syntax highlighting
syntect = "5"

# Unicode display width
unicode-width = "0.2"

# Tracing/logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
